[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = molecule-lxd
url = https://github.com/ansible-community/molecule-lxd
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-lxd/issues
    CI = https://github.com/ansible-community/molecule-lxd/actions
    Mailing lists = https://docs.ansible.com/ansible/latest/community/communication.html#mailing-list-information
    Source Code = https://github.com/ansible-community/molecule-lxd
description = LCD Molecule Plugin :: run molecule tests on LXD
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ansible by Red Hat
author_email = info@ansible.com
maintainer = Ansible by Red Hat
maintainer_email = info@ansible.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    lxd

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    molecule >= 3.2.0
    pyyaml >= 5.1, < 6

[options.extras_require]
test =
    molecule[test]

[options.entry_points]
molecule.driver =
    lxd = molecule_lxd.driver:LXD

[options.packages.find]
where = .
